...
          children: <Widget>[
            TextField(
              key: Key('text-box'),
              controller: usdController,
              keyboardType: TextInputType.number,
              decoration: InputDecoration(
                labelText: "Enter USD",
                errorText: showErrorMessage ? "Enter a valid USD value" : null,
              ),
            ),
            ElevatedButton(
              key: Key('convert-btn'),
              onPressed: () => convertUSDToBTC(btcRate),
              child: Text("Convert"),
...
